// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<button
  className="button"
  onClick={[Function]}
/>
`;

exports[`Button success 1`] = `
<button
  className="button buttonSuccess"
  onClick={[Function]}
/>
`;

exports[`Button with text 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Submit
</button>
`;
